--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>New Web Project</title>
-    </head>
-    <body>
-        <h1>New Web Project Page</h1>
-    </body>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<title>New Web Project</title>
+	</head>
+	<body>
+		<h1>New Web Project Page</h1>
+	</body>
+	<script type="text/javascript">
+		/**
+		 * @author Frank
+		 */
+		alert("hi");
+
+	</script>
+
 </html>
